add-authorization/pagination

--- a/MultiShopUI/Views/Auth/Register.cshtml
+++ b/MultiShopUI/Views/Auth/Register.cshtml
@@ -35,8 +35,8 @@
             <input asp-for="RePassword" type="password" class="form-control" />
             <span asp-validation-for="RePassword" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Kayıt Ol</button>
-        <a asp-action="Login">Zaten bir hesabınız var mı? Giriş Yapın</a>
+        <button type="submit" class="btn btn-primary">Sign in</button>
+        <a asp-action="Login">Already have an account? Sign up</a>
     </div>
 
 </form>
