--- a/MultiShopUI/Areas/Dashboard/Views/Shared/_AdminLayout.cshtml
+++ b/MultiShopUI/Areas/Dashboard/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+    var isAdmin =Convert.ToBoolean( ViewData["IsAdmin"]);
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -19,22 +23,32 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Products" asp-action="GetAllProducts">Products</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Services" asp-action="GetAllServices">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Brands" asp-action="GetAllBrands">Brands</a>
-                        </li>
+                        @if(isAdmin==true)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Products" asp-action="GetAllProducts">Products</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Services" asp-action="GetAllServices">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Brands" asp-action="GetAllBrands">Brands</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="User" asp-action="User">Users</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Categories" asp-action="GetAllCategories">Categories</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Contacts" asp-action="ContactsList">Contacts</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li></li>
+                        }
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Categories" asp-action="GetAllCategories">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Dashboard" asp-controller="Contacts" asp-action="ContactsList">Contacts</a>
-                        </li>
                     </ul>
                 </div>
             </div>
