--- a/MultiShopUI/Views/Auth/Login.cshtml
+++ b/MultiShopUI/Views/Auth/Login.cshtml
@@ -15,8 +15,8 @@
 			<input asp-for="Password" type="password" class="form-control" />
 			<span asp-validation-for="Password" class="text-danger"></span>
 		</div>
-		<button type="submit" class="btn btn-primary">Giriş Yap</button>
-		<a asp-action="Register">Kayıt Ol</a>
+		<button type="submit" class="btn btn-primary">Sign Up</button>
+		<a asp-action="Register">Sign In</a>
     </div>
    
 </form>
